--- a/PosVerificador/Properties/Resources.resx
+++ b/PosVerificador/Properties/Resources.resx
@@ -163,6 +163,15 @@
   <data name="error" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\sonidos\error.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="error_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\error_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ok_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ok_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ok_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ok_green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="paso" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\sonidos\paso.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
