--- a/PosOnLine/Src/Cierre/CierreFrm.resx
+++ b/PosOnLine/Src/Cierre/CierreFrm.resx
@@ -146,6 +146,20 @@
         wO+kk3ALXMJrSzn4nXCSpB4gm5j8oVjWN17AV7DAZ2gVAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="BT_VUELTOS_ENTREGADOS.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAetJREFUaEPt2M0rBGEcB/DxkpeEOBApDg4oXJW8nB3kJA4OykHkrJQc/AHiICJH
+        EcVBbo5eDiJScpZyUPwJvt95ZrbZbWZ2Zj2/WcvzrU/7zGZ3n++YmZ4Zy8TEJKf0wKBm3ZBI+ENXcKoZ
+        v7MLxNMPZ2qoNefQp4ayMQUCYgpEjSkQkB8VWIfLiB7hI+M9HfidDxnvheGcU/mCzgLDOafy6bwyTdCu
+        hnZGoVYNrQbohSJ7S3/GYBu2HCdw5NnegQFgvHNO27iHXeBEV2AW+EHmGtZgyN7Sn2eYg3HHMex5tpfg
+        ApjAAjNwqIZ2uBeG1dCaBO4RqewDSzw53uHNs/0C3IFMYAHGPWQYHlLe1DuvEqmE5izKgAktUAgxBfId
+        UyDfMQXynf9XoDhh2RKrAJcX/BsueZPAleYIhCVWAa4EuZhKKvOwqoaByakAl9O8kZBUBWIFamBKGBdr
+        YgWSSuwCPGk6QhzABPBOjR+UVAcLsAl+c3Gl3VJuAJ9NBuGNxTQklUV4Bb+5uDjnyHEPoWrgXZmkqOdA
+        rLgFGoH/WklRr0Kx8htP4lhxC7QAn6BJ4qVarEAF8PGfpBIQK1AKbRoFPeEQK9AKdxrxcukXcxJnZhlu
+        wO+kk3ALXMJrSzn4nXCSpB4gm5j8oVjWN17AV7DAZ2gVAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="printDocument1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
