--- a/PosOnLine/Properties/Resources.resx
+++ b/PosOnLine/Properties/Resources.resx
@@ -271,4 +271,7 @@
   <data name="bt_buscar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bt_buscar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ZUFU" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ZUFU.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
