--- a/PosOnLine/Properties/Resources.resx
+++ b/PosOnLine/Properties/Resources.resx
@@ -274,4 +274,13 @@
   <data name="ZUFU" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ZUFU.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="BOLSA_SHOPPING_LOGO" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BOLSA_SHOPPING_LOGO.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="carrito_compras_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\carrito_compras_logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LOGO_BASE" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LOGO_BASE.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
