--- a/PosOnLine/Properties/Resources.resx
+++ b/PosOnLine/Properties/Resources.resx
@@ -283,4 +283,13 @@
   <data name="LOGO_BASE" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LOGO_BASE.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bt_entrada_salida_dinero_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bt_entrada_salida_dinero_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bt_entrada_salida_dinero_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bt_entrada_salida_dinero_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bt_entrada_salida_dinero_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bt_entrada_salida_dinero_48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
