--- a/PosOnLine/Properties/Resources.resx
+++ b/PosOnLine/Properties/Resources.resx
@@ -292,4 +292,7 @@
   <data name="bt_entrada_salida_dinero_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bt_entrada_salida_dinero_48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bt_vendedor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bt_vendedor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
